Updated task manager files